Revert "karti.html update"
This reverts commit bf33cd2a58aa3cd4a82381ff10efa4f0e18ce5d3.

--- a/karti.html
+++ b/karti.html
@@ -108,7 +108,39 @@
 					</div>
 				</section>
 
-				
+				<aside>
+					<div class="box">
+						<p class="section-title">Skills</p>
+						<div class="skills">
+							<div>
+								<div class="skill"><span>JavaScript / TypeScript</span><strong>90%</strong></div>
+								<div class="bar"><i style="width:90%"></i></div>
+							</div>
+							<div>
+								<div class="skill"><span>React / Next.js</span><strong>85%</strong></div>
+								<div class="bar"><i style="width:85%"></i></div>
+							</div>
+							<div>
+								<div class="skill"><span>Node.js / Express</span><strong>80%</strong></div>
+								<div class="bar"><i style="width:80%"></i></div>
+							</div>
+							<div>
+								<div class="skill"><span>Databases (Mongo/Postgres)</span><strong>75%</strong></div>
+								<div class="bar"><i style="width:75%"></i></div>
+							</div>
+						</div>
+					</div>
+
+					<div class="box">
+						<p class="section-title">Languages</p>
+						<p style="color:var(--muted)">English (Fluent)<br/>Hindi / Bengali (Native)</p>
+					</div>
+
+					<div class="box">
+						<p class="section-title">Certifications</p>
+						<p style="color:var(--muted);font-size:13px">AWS Cloud Practitioner • JavaScript Algorithms</p>
+					</div>
+				</aside>
 			</main>
 
 			<footer>
